--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.23.8",
-    "openai": "^4.68.4"   // oppure @groq/groq-sdk, @google/generative-ai, ecc.
+    "openai": "^4.68.4"
   },
   "devDependencies": {
     "@types/node": "^20",
