--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": {
-    "next": "14.2.15",
-    "react": "^18",
-    "react-dom": "^18",
-    "zod": "^3.23.8",
-    "openai": "^4.68.4"
-  },
+"dependencies": {
+  "next": "14.2.15",
+  "react": "^18",
+  "react-dom": "^18",
+  "zod": "^3.23.8",
+  "@google/generative-ai": "^0.21.0"
+},
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
